@@ -1,3 +1,8 @@
+Wed Oct  7 13:43:15 UTC 2009 / Arjen de Korte <arjen@de-korte.org>
+
+ - drivers/apc-hid.c: add support for Back-UPS RS series test.battery.*
+   commands (experimental)
+
 Tue Oct  6 19:39:22 UTC 2009 / Arjen de Korte <arjen@de-korte.org>
 
  - m4/nut_check_libssl.m4: use pkg-config for compiler and linker flags
